--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <DOCTYPE HTML>
   <html>
     <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9502344239058652"
+     crossorigin="anonymous"></script>
       <title>Ads Site</title>
       <link rel="stylesheet" href="style.css">
     </head>
